#
# some news ... see also TODO for hints
#


2021-05-25 -> ## libhelper stuff
	      fix signed/unsigned bug in request struct

2021-05-24 -> ## repo stuff
	      change cmd handling via fifo

2021-05-22 -> ## repo stuff
	      add __DEBUG__ tag

	      ## lcd2004_i2c stuff
              add lcd_write_cmd fuction

2021-05-20 -> ## amtrack stuff
	      some improvements for the functional testing

              ## lcd2004_i2c stuff
	      some improvements for the functional testing

2021-05-19 -> ## amtrack stuff
              add first tests
	      add LCD size via kd argument

              ## lcd2004_i2c stuff
              add first tests
	      smaller updates
	      add LCD size via kdo argument
	      handle LCD size
	      add write line and write string function

	      ## libhelper stuff
	      add some LCD specific defines
	      add some first docker-pi specific defines
	      rework struct lcd_request

              ## repo stuff
              update runit files
	      some documentation adds/changes/fixes/improvements

2021-05-15 -> ## repo stuff
	      add some new pics of the development environment
	      some documentation adds/changes/fixes/improvements

2021-05-15 -> ## repo stuff
	      some documentation adds/changes/fixes/improvements

2021-05-14 -> ## amtrack stuff
              add skeleton

              ## repo stuff
	      some documentation adds/changes/fixes/improvements
	      add amtrack folder

              ## lcd2004_i2c stuff
              optimize fifo handling

              ## libhelper stuff
	      add clear_flags function

2021-05-13 -> ## target stuff
	      add agetty.tty7/8 and activte them
	      activate rsyslog and add config for tty11 and tty12
	      copy lcd/sensor_daemon runit scripts to /etc/sv

              ## repo stuff
	      some documentation adds/changes/fixes/improvements

	      ## lcd2004_i2c stuff
	      add error handling
	      add first parts of fifo handling
	      add thread for fifo handling
