@@ -316,35 +316,35 @@ static int say_hello(void)
 	case LCD1602:
 		goto_line1();
 		LCD_WRITE_DATA('*');
-		for (i = 1; i < lcd_max_col; i++)
+		for (i = 1; i < (lcd_max_col - 1); i++)
 			(void) lcd_cursor_shift_right();
 		LCD_WRITE_DATA('*');
 
 		goto_line2();
 		LCD_WRITE_DATA('*' );
-		for (i = 1; i < lcd_max_col; i++)
+		for (i = 1; i < (lcd_max_col - 1); i++)
 			(void) lcd_cursor_shift_right();
 		LCD_WRITE_DATA('*');
 
 		break;
 	case LCD2004:
 		goto_line1();
-		for (i = 1; i < lcd_max_col; i++)
+		for (i = 1; i <= lcd_max_col; i++)
 			LCD_WRITE_DATA('*');
 
 		goto_line4();
-		for (i = 1; i < lcd_max_col; i++)
+		for (i = 1; i <= lcd_max_col; i++)
 			LCD_WRITE_DATA('*');
 
 		goto_line2();
 		LCD_WRITE_DATA('*' );
-		for (i = 1; i < lcd_max_col; i++)
+		for (i = 1; i < (lcd_max_col - 1); i++)
 			(void) lcd_cursor_shift_right();
 		LCD_WRITE_DATA('*');
 
 		goto_line3();
 		LCD_WRITE_DATA('*' );
-		for (i = 1; i < lcd_max_col; i++)
+		for (i = 1; i < (lcd_max_col - 1); i++)
 			(void) lcd_cursor_shift_right();
 		LCD_WRITE_DATA('*');
 
@@ -446,10 +446,10 @@ int lcd_write_string (unsigned char cur_pos, char *str)
 	int i = 0;
 
 	if (cur_pos != 0)
-		for (i = 1; i < cur_pos; i++)
+		for (i = 1; i < (cur_pos - 1); i++)
 			(void) lcd_cursor_shift_right();
 
-	for (i = 0; i < lcd_max_col - cur_pos -1; i++ )
+	for (i = 0; i < (lcd_max_col - cur_pos - 1); i++ )
 		LCD_WRITE_DATA(str[i]);
 
 	return 0;
